frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program function
Rule 3     program -> empty
Rule 4     type -> Int
Rule 5     function -> type Identifier LParen params RParen Semi
Rule 6     function -> type Identifier LParen params RParen LBrace block RBrace
Rule 7     params -> empty
Rule 8     params -> params param_item
Rule 9     param_item -> declaration
Rule 10    param_item -> Comma declaration
Rule 11    block -> block block_item
Rule 12    block -> empty
Rule 13    block_item -> statement
Rule 14    block_item -> declaration Semi
Rule 15    statement -> statement_matched
Rule 16    statement -> statement_unmatched
Rule 17    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 18    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 19    statement_unmatched -> If LParen expression RParen statement
Rule 20    statement_matched -> While LParen expression RParen statement_matched
Rule 21    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 22    statement_matched -> For LParen expression Semi expression Semi expression RParen statement_matched
Rule 23    statement_matched -> For LParen declaration Semi expression Semi expression RParen statement_matched
Rule 24    statement_unmatched -> For LParen expression Semi expression Semi expression RParen statement_unmatched
Rule 25    statement_unmatched -> For LParen declaration Semi expression Semi expression RParen statement_unmatched
Rule 26    statement_matched -> For LParen Semi expression Semi expression RParen statement_matched
Rule 27    statement_unmatched -> For LParen Semi expression Semi expression RParen statement_unmatched
Rule 28    statement_matched -> For LParen expression Semi Semi expression RParen statement_matched
Rule 29    statement_matched -> For LParen declaration Semi Semi expression RParen statement_matched
Rule 30    statement_unmatched -> For LParen expression Semi Semi expression RParen statement_unmatched
Rule 31    statement_unmatched -> For LParen declaration Semi Semi expression RParen statement_unmatched
Rule 32    statement_matched -> For LParen expression Semi expression Semi RParen statement_matched
Rule 33    statement_matched -> For LParen declaration Semi expression Semi RParen statement_matched
Rule 34    statement_unmatched -> For LParen expression Semi expression Semi RParen statement_unmatched
Rule 35    statement_unmatched -> For LParen declaration Semi expression Semi RParen statement_unmatched
Rule 36    statement_matched -> For LParen expression Semi Semi RParen statement_matched
Rule 37    statement_matched -> For LParen declaration Semi Semi RParen statement_matched
Rule 38    statement_unmatched -> For LParen expression Semi Semi RParen statement_unmatched
Rule 39    statement_unmatched -> For LParen declaration Semi Semi RParen statement_unmatched
Rule 40    statement_matched -> For LParen Semi expression Semi RParen statement_matched
Rule 41    statement_unmatched -> For LParen Semi expression Semi RParen statement_unmatched
Rule 42    statement_matched -> For LParen Semi Semi expression RParen statement_matched
Rule 43    statement_unmatched -> For LParen Semi Semi expression RParen statement_unmatched
Rule 44    statement_matched -> For LParen Semi Semi RParen statement_matched
Rule 45    statement_unmatched -> For LParen Semi Semi RParen statement_unmatched
Rule 46    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 47    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 48    statement_matched -> Return expression Semi
Rule 49    statement_matched -> opt_expression Semi
Rule 50    statement_matched -> LBrace block RBrace
Rule 51    statement_matched -> Break Semi
Rule 52    statement_matched -> Continue Semi
Rule 53    opt_expression -> expression
Rule 54    opt_expression -> empty
Rule 55    declaration -> type Identifier
Rule 56    declaration -> type Identifier Assign expression
Rule 57    expression -> assignment
Rule 58    assignment -> conditional
Rule 59    conditional -> logical_or
Rule 60    logical_or -> logical_and
Rule 61    logical_and -> bit_or
Rule 62    bit_or -> xor
Rule 63    xor -> bit_and
Rule 64    bit_and -> equality
Rule 65    equality -> relational
Rule 66    relational -> additive
Rule 67    additive -> multiplicative
Rule 68    multiplicative -> unary
Rule 69    unary -> postfix
Rule 70    postfix -> primary
Rule 71    unary -> Minus unary
Rule 72    unary -> BitNot unary
Rule 73    unary -> Not unary
Rule 74    postfix -> Identifier LParen arguments RParen
Rule 75    arguments -> empty
Rule 76    arguments -> arguments argument_item
Rule 77    argument_item -> Comma expression
Rule 78    argument_item -> expression
Rule 79    assignment -> Identifier Assign expression
Rule 80    logical_or -> logical_or Or logical_and
Rule 81    logical_and -> logical_and And bit_or
Rule 82    bit_or -> bit_or BitOr xor
Rule 83    xor -> xor Xor bit_and
Rule 84    bit_and -> bit_and BitAnd equality
Rule 85    equality -> equality NotEqual relational
Rule 86    equality -> equality Equal relational
Rule 87    relational -> relational Less additive
Rule 88    relational -> relational Greater additive
Rule 89    relational -> relational LessEqual additive
Rule 90    relational -> relational GreaterEqual additive
Rule 91    additive -> additive Plus multiplicative
Rule 92    additive -> additive Minus multiplicative
Rule 93    multiplicative -> multiplicative Mul unary
Rule 94    multiplicative -> multiplicative Div unary
Rule 95    multiplicative -> multiplicative Mod unary
Rule 96    conditional -> logical_or Question expression Colon conditional
Rule 97    primary -> Integer
Rule 98    primary -> Identifier
Rule 99    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 81
Assign               : 56 79
BitAnd               : 84
BitNot               : 72
BitOr                : 82
Break                : 51
Colon                : 96
Comma                : 10 77
Continue             : 52
Div                  : 94
Do                   : 46 47
Else                 : 17 18
Equal                : 86
For                  : 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
Greater              : 88
GreaterEqual         : 90
Identifier           : 5 6 55 56 74 79 98
If                   : 17 18 19
Int                  : 4
Integer              : 97
LBrace               : 6 50
LParen               : 5 6 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 74 99
Less                 : 87
LessEqual            : 89
Minus                : 71 92
Mod                  : 95
Mul                  : 93
Not                  : 73
NotEqual             : 85
Or                   : 80
Plus                 : 91
Question             : 96
RBrace               : 6 50
RParen               : 5 6 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 74 99
Return               : 48
Semi                 : 5 14 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 48 49 51 52
While                : 20 21 46 47
Xor                  : 83
error                : 

Nonterminals, with rules where they appear

additive             : 66 87 88 89 90 91 92
argument_item        : 76
arguments            : 74 76
assignment           : 57
bit_and              : 63 83 84
bit_or               : 61 81 82
block                : 6 11 50
block_item           : 11
conditional          : 58 96
declaration          : 9 10 14 23 25 29 31 33 35 37 39
empty                : 3 7 12 54 75
equality             : 64 84 85 86
expression           : 17 18 19 20 21 22 22 22 23 23 24 24 24 25 25 26 26 27 27 28 28 29 30 30 31 32 32 33 34 34 35 36 38 40 41 42 43 46 47 48 53 56 77 78 79 96 99
function             : 2
logical_and          : 60 80 81
logical_or           : 59 80 96
multiplicative       : 67 91 92 93 94 95
opt_expression       : 49
param_item           : 8
params               : 5 6 8
postfix              : 69
primary              : 70
program              : 2 0
relational           : 65 85 86 87 88 89 90
statement            : 13 19
statement_matched    : 15 17 17 18 20 22 23 26 28 29 32 33 36 37 40 42 44 46
statement_unmatched  : 16 18 21 24 25 27 30 31 34 35 38 39 41 43 45 47
type                 : 5 6 55 56
unary                : 68 71 72 73 93 94 95
xor                  : 62 82 83

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program function
    (3) program -> . empty
    (1) empty -> .

    Int             reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . function
    (5) function -> . type Identifier LParen params RParen Semi
    (6) function -> . type Identifier LParen params RParen LBrace block RBrace
    (4) type -> . Int

    Int             shift and go to state 5

    function                       shift and go to state 3
    type                           shift and go to state 4

state 2

    (3) program -> empty .

    Int             reduce using rule 3 (program -> empty .)
    $end            reduce using rule 3 (program -> empty .)


state 3

    (2) program -> program function .

    Int             reduce using rule 2 (program -> program function .)
    $end            reduce using rule 2 (program -> program function .)


state 4

    (5) function -> type . Identifier LParen params RParen Semi
    (6) function -> type . Identifier LParen params RParen LBrace block RBrace

    Identifier      shift and go to state 6


state 5

    (4) type -> Int .

    Identifier      reduce using rule 4 (type -> Int .)


state 6

    (5) function -> type Identifier . LParen params RParen Semi
    (6) function -> type Identifier . LParen params RParen LBrace block RBrace

    LParen          shift and go to state 7


state 7

    (5) function -> type Identifier LParen . params RParen Semi
    (6) function -> type Identifier LParen . params RParen LBrace block RBrace
    (7) params -> . empty
    (8) params -> . params param_item
    (1) empty -> .

    RParen          reduce using rule 1 (empty -> .)
    Comma           reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)

    params                         shift and go to state 8
    empty                          shift and go to state 9

state 8

    (5) function -> type Identifier LParen params . RParen Semi
    (6) function -> type Identifier LParen params . RParen LBrace block RBrace
    (8) params -> params . param_item
    (9) param_item -> . declaration
    (10) param_item -> . Comma declaration
    (55) declaration -> . type Identifier
    (56) declaration -> . type Identifier Assign expression
    (4) type -> . Int

    RParen          shift and go to state 11
    Comma           shift and go to state 14
    Int             shift and go to state 5

    type                           shift and go to state 10
    param_item                     shift and go to state 12
    declaration                    shift and go to state 13

state 9

    (7) params -> empty .

    RParen          reduce using rule 7 (params -> empty .)
    Comma           reduce using rule 7 (params -> empty .)
    Int             reduce using rule 7 (params -> empty .)


state 10

    (55) declaration -> type . Identifier
    (56) declaration -> type . Identifier Assign expression

    Identifier      shift and go to state 15


state 11

    (5) function -> type Identifier LParen params RParen . Semi
    (6) function -> type Identifier LParen params RParen . LBrace block RBrace

    Semi            shift and go to state 16
    LBrace          shift and go to state 17


state 12

    (8) params -> params param_item .

    RParen          reduce using rule 8 (params -> params param_item .)
    Comma           reduce using rule 8 (params -> params param_item .)
    Int             reduce using rule 8 (params -> params param_item .)


state 13

    (9) param_item -> declaration .

    RParen          reduce using rule 9 (param_item -> declaration .)
    Comma           reduce using rule 9 (param_item -> declaration .)
    Int             reduce using rule 9 (param_item -> declaration .)


state 14

    (10) param_item -> Comma . declaration
    (55) declaration -> . type Identifier
    (56) declaration -> . type Identifier Assign expression
    (4) type -> . Int

    Int             shift and go to state 5

    declaration                    shift and go to state 18
    type                           shift and go to state 10

state 15

    (55) declaration -> type Identifier .
    (56) declaration -> type Identifier . Assign expression

    RParen          reduce using rule 55 (declaration -> type Identifier .)
    Comma           reduce using rule 55 (declaration -> type Identifier .)
    Int             reduce using rule 55 (declaration -> type Identifier .)
    Semi            reduce using rule 55 (declaration -> type Identifier .)
    Assign          shift and go to state 19


state 16

    (5) function -> type Identifier LParen params RParen Semi .

    Int             reduce using rule 5 (function -> type Identifier LParen params RParen Semi .)
    $end            reduce using rule 5 (function -> type Identifier LParen params RParen Semi .)


state 17

    (6) function -> type Identifier LParen params RParen LBrace . block RBrace
    (11) block -> . block block_item
    (12) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 20
    empty                          shift and go to state 21

state 18

    (10) param_item -> Comma declaration .

    RParen          reduce using rule 10 (param_item -> Comma declaration .)
    Comma           reduce using rule 10 (param_item -> Comma declaration .)
    Int             reduce using rule 10 (param_item -> Comma declaration .)


state 19

    (56) declaration -> type Identifier Assign . expression
    (57) expression -> . assignment
    (58) assignment -> . conditional
    (79) assignment -> . Identifier Assign expression
    (59) conditional -> . logical_or
    (96) conditional -> . logical_or Question expression Colon conditional
    (60) logical_or -> . logical_and
    (80) logical_or -> . logical_or Or logical_and
    (61) logical_and -> . bit_or
    (81) logical_and -> . logical_and And bit_or
    (62) bit_or -> . xor
    (82) bit_or -> . bit_or BitOr xor
    (63) xor -> . bit_and
    (83) xor -> . xor Xor bit_and
    (64) bit_and -> . equality
    (84) bit_and -> . bit_and BitAnd equality
    (65) equality -> . relational
    (85) equality -> . equality NotEqual relational
    (86) equality -> . equality Equal relational
    (66) relational -> . additive
    (87) relational -> . relational Less additive
    (88) relational -> . relational Greater additive
    (89) relational -> . relational LessEqual additive
    (90) relational -> . relational GreaterEqual additive
    (67) additive -> . multiplicative
    (91) additive -> . additive Plus multiplicative
    (92) additive -> . additive Minus multiplicative
    (68) multiplicative -> . unary
    (93) multiplicative -> . multiplicative Mul unary
    (94) multiplicative -> . multiplicative Div unary
    (95) multiplicative -> . multiplicative Mod unary
    (69) unary -> . postfix
    (71) unary -> . Minus unary
    (72) unary -> . BitNot unary
    (73) unary -> . Not unary
    (70) postfix -> . primary
    (74) postfix -> . Identifier LParen arguments RParen
    (97) primary -> . Integer
    (98) primary -> . Identifier
    (99) primary -> . LParen expression RParen

    Identifier      shift and go to state 22
    Minus           shift and go to state 35
    BitNot          shift and go to state 38
    Not             shift and go to state 39
    Integer         shift and go to state 42
    LParen          shift and go to state 41

    expression                     shift and go to state 23
    assignment                     shift and go to state 24
    conditional                    shift and go to state 25
    logical_or                     shift and go to state 26
    logical_and                    shift and go to state 27
    bit_or                         shift and go to state 28
    xor                            shift and go to state 29
    bit_and                        shift and go to state 30
    equality                       shift and go to state 31
    relational                     shift and go to state 32
    additive                       shift and go to state 33
    multiplicative                 shift and go to state 34
    unary                          shift and go to state 36
    postfix                        shift and go to state 37
    primary                        shift and go to state 40

state 20

    (6) function -> type Identifier LParen params RParen LBrace block . RBrace
    (11) block -> block . block_item
    (13) block_item -> . statement
    (14) block_item -> . declaration Semi
    (15) statement -> . statement_matched
    (16) statement -> . statement_unmatched
    (55) declaration -> . type Identifier
    (56) declaration -> . type Identifier Assign expression
    (17) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (20) statement_matched -> . While LParen expression RParen statement_matched
    (22) statement_matched -> . For LParen expression Semi expression Semi expression RParen statement_matched
    (23) statement_matched -> . For LParen declaration Semi expression Semi expression RParen statement_matched
    (26) statement_matched -> . For LParen Semi expression Semi expression RParen statement_matched
    (28) statement_matched -> . For LParen expression Semi Semi expression RParen statement_matched
    (29) statement_matched -> . For LParen declaration Semi Semi expression RParen statement_matched
    (32) statement_matched -> . For LParen expression Semi expression Semi RParen statement_matched
    (33) statement_matched -> . For LParen declaration Semi expression Semi RParen statement_matched
    (36) statement_matched -> . For LParen expression Semi Semi RParen statement_matched
    (37) statement_matched -> . For LParen declaration Semi Semi RParen statement_matched
    (40) statement_matched -> . For LParen Semi expression Semi RParen statement_matched
    (42) statement_matched -> . For LParen Semi Semi expression RParen statement_matched
    (44) statement_matched -> . For LParen Semi Semi RParen statement_matched
    (46) statement_matched -> . Do statement_matched While LParen expression RParen Semi
    (48) statement_matched -> . Return expression Semi
    (49) statement_matched -> . opt_expression Semi
    (50) statement_matched -> . LBrace block RBrace
    (51) statement_matched -> . Break Semi
    (52) statement_matched -> . Continue Semi
    (18) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (19) statement_unmatched -> . If LParen expression RParen statement
    (21) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (24) statement_unmatched -> . For LParen expression Semi expression Semi expression RParen statement_unmatched
    (25) statement_unmatched -> . For LParen declaration Semi expression Semi expression RParen statement_unmatched
    (27) statement_unmatched -> . For LParen Semi expression Semi expression RParen statement_unmatched
    (30) statement_unmatched -> . For LParen expression Semi Semi expression RParen statement_unmatched
    (31) statement_unmatched -> . For LParen declaration Semi Semi expression RParen statement_unmatched
    (34) statement_unmatched -> . For LParen expression Semi expression Semi RParen statement_unmatched
    (35) statement_unmatched -> . For LParen declaration Semi expression Semi RParen statement_unmatched
    (38) statement_unmatched -> . For LParen expression Semi Semi RParen statement_unmatched
    (39) statement_unmatched -> . For LParen declaration Semi Semi RParen statement_unmatched
    (41) statement_unmatched -> . For LParen Semi expression Semi RParen statement_unmatched
    (43) statement_unmatched -> . For LParen Semi Semi expression RParen statement_unmatched
    (45) statement_unmatched -> . For LParen Semi Semi RParen statement_unmatched
    (47) statement_unmatched -> . Do statement_unmatched While LParen expression RParen Semi
    (4) type -> . Int
    (53) opt_expression -> . expression
    (54) opt_expression -> . empty
    (57) expression -> . assignment
    (1) empty -> .
    (58) assignment -> . conditional
    (79) assignment -> . Identifier Assign expression
    (59) conditional -> . logical_or
    (96) conditional -> . logical_or Question expression Colon conditional
    (60) logical_or -> . logical_and
    (80) logical_or -> . logical_or Or logical_and
    (61) logical_and -> . bit_or
    (81) logical_and -> . logical_and And bit_or
    (62) bit_or -> . xor
    (82) bit_or -> . bit_or BitOr xor
    (63) xor -> . bit_and
    (83) xor -> . xor Xor bit_and
    (64) bit_and -> . equality
    (84) bit_and -> . bit_and BitAnd equality
    (65) equality -> . relational
    (85) equality -> . equality NotEqual relational
    (86) equality -> . equality Equal relational
    (66) relational -> . additive
    (87) relational -> . relational Less additive
    (88) relational -> . relational Greater additive
    (89) relational -> . relational LessEqual additive
    (90) relational -> . relational GreaterEqual additive
    (67) additive -> . multiplicative
    (91) additive -> . additive Plus multiplicative
    (92) additive -> . additive Minus multiplicative
    (68) multiplicative -> . unary
    (93) multiplicative -> . multiplicative Mul unary
    (94) multiplicative -> . multiplicative Div unary
    (95) multiplicative -> . multiplicative Mod unary
    (69) unary -> . postfix
    (71) unary -> . Minus unary
    (72) unary -> . BitNot unary
    (73) unary -> . Not unary
    (70) postfix -> . primary
    (74) postfix -> . Identifier LParen arguments RParen
    (97) primary -> . Integer
    (98) primary -> . Identifier
    (99) primary -> . LParen expression RParen

    RBrace          shift and go to state 44
    If              shift and go to state 51
    While           shift and go to state 52
    For             shift and go to state 53
    Do              shift and go to state 54
    Return          shift and go to state 55
    LBrace          shift and go to state 43
    Break           shift and go to state 57
    Continue        shift and go to state 58
    Int             shift and go to state 5
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 22
    Minus           shift and go to state 35
    BitNot          shift and go to state 38
    Not             shift and go to state 39
    Integer         shift and go to state 42
    LParen          shift and go to state 41

    type                           shift and go to state 10
    block_item                     shift and go to state 45
    statement                      shift and go to state 46
    declaration                    shift and go to state 47
    statement_matched              shift and go to state 48
    statement_unmatched            shift and go to state 49
    expression                     shift and go to state 50
    opt_expression                 shift and go to state 56
    empty                          shift and go to state 59
    assignment                     shift and go to state 24
    conditional                    shift and go to state 25
    logical_or                     shift and go to state 26
    logical_and                    shift and go to state 27
    bit_or                         shift and go to state 28
    xor                            shift and go to state 29
    bit_and                        shift and go to state 30
    equality                       shift and go to state 31
    relational                     shift and go to state 32
    additive                       shift and go to state 33
    multiplicative                 shift and go to state 34
    unary                          shift and go to state 36
    postfix                        shift and go to state 37
    primary                        shift and go to state 40

state 21

    (12) block -> empty .
